[package]
name = "axolotl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.11", features = ["derive", "cargo"] }
heck = "0.4.0"
regex = "1.6.0"
semver = "1.0.14"
toml_edit = "0.14.4"
