[package]
name = "axolotl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_ecma_parser = { version = "0.122.7", features = ["typescript"] }
clap = { version = "4.0.11", features = ["derive", "cargo"] }
heck = "0.4.0"
regex = "1.6.0"
semver = "1.0.14"
swc_common = { version = "0.29.5", features = ["tty-emitter"] }
toml_edit = "0.14.4"
swc_ecma_ast = "0.94.6"
